Added partial sort of meetings by date